--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ font-family: "Material Icons Round";
 <div class='section'>
 <h4>Creative</h4>
 <h2>New ideas, creations, and thoughts frequently</h2>
-<p>I love seeing the word, sharing my words on my blog, and helping others learn what I know. You can check out my creations, adventures, and blogs here.</p>
+<p>I love experiencing and capturing the beautiful scenery of the world, sharing my words on my blog, and helping others learn what I know. You can check out my creations, adventures, and blogs here.</p>
 <br><p><button class='icon'>
 <i class='material-icon material-icons-outlined'>explore</i>
 <span>Explore <i class='material-arrow material-icons-round'>arrow_forward</i></span></button></p>
