--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ font-family: "Material Icons Round";
 <div class='section'>
 <h4>Creative</h4>
 <h2>New ideas, creations, and thoughts frequently</h2>
-<p>I love experiencing and capturing the beautiful scenery of the world, sharing my words on my blog, and helping others learn what I know. You can check out my creations, adventures, and blogs here.</p>
+<p>I love experiencing and capture the beautiful scenery of the world, sharing my words on my blog, and helping others learn what I know. You can check out my creations, adventures, and blogs here.</p>
 <br><p><button class='icon'>
 <i class='material-icon material-icons-outlined'>explore</i>
 <span>Explore <i class='material-arrow material-icons-round'>arrow_forward</i></span></button></p>
@@ -326,7 +326,7 @@ font-family: "Material Icons Round";
 <div class='section'>
 <h4>Technological</h4>
 <h2>Web development and programming is my hobby!</h2>
-<p>I started building websites in 3rd grade, with Word and soon learned HTML/CSS to build more customized sites. I always preferred hand-coding sites because I'm an insanely fast typer, rather than using a CMS. Web design eventually led me into dissecting JavaScript, leading me into the world of programming: Python, Java, Robotics, and server side.</p>
+<p>I started building websites in 3rd grade, with Word and soon learned HTML/CSS to build more customized sites. I always preferred hand-coding sites because I'm an insanely fast typer, rather than using a CMS. Web design eventually led me into dissecting JavaScript, leading me into the world of programming: Python, Java, Robotics, and server side PHP/NodeJS.</p>
 <br><p><button class='icon'>
 <i class='material-icon material-icons-outlined'>code</i>
 <span>My projects <i class='material-arrow material-icons-round'>arrow_forward</i></span></button></p>
