Added "explore" tab :)

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@ font-family: "Material Icons Round";
 <div id='app'>
 <header>
 <nav class='left'><img src='logo.png'/>
-<span><a href="#" class='active'><span>Home</span></span></a><span><a href="#">About</span></a><span><a href="#">Explore</span></a><span><a href="#">Contact</span></a></nav>
+<span><a href="index.html" class='active'><span>Home</span></span></a><span><a href="about.html">About</span></a><span><a href="explore.html">Explore</span></a><span><a href="contact.html">Contact</span></a></nav>
 <nav class='right'>
 <input placeholder='Search'/>
 </nav>
